--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         </header>
         <div class="hero__section_container">
             <img class="hero__section_logo" src="./images/heroSectionLogo.png" alt="zomato logo">
-            <h1 class="hero__section_title">Deliver the best food & drinks in Chandigarh</h1>
+            <h1 class="hero__section_title">Deliver the best food & drinks in New Delhi</h1>
             <div class="hero__section_input_container">
 
                 <!-- <i  class="fa-solid fa-location-dot"> </i>  -->
-                <input class="hero__section_input_location" type="text" placeholder="Chandigarh">
+                <input class="hero__section_input_location" type="text" placeholder="New Delhi">
                 <!-- <i class="fa-solid fa-magnifying-glass"> </i> -->
                 <input class="hero__section_input_search" type="text"
                     placeholder="seach for the restaurant,cuisine or a dish">
@@ -71,9 +71,9 @@
         <h1>Collections</h1>
         <div class="sub__heading_collection">
             <span>
-                Explore curated lists of top restaurants, cafes, pubs, and bars in Chandigarh, based on trends
+                Explore curated lists of top restaurants, cafes, pubs, and bars in New Delhi, based on trends
             </span>
-            <span>All collections in chandigarh <i class="fa-solid fa-caret-right"></i></span>
+            <span>All collections in New Delhi <i class="fa-solid fa-caret-right"></i></span>
         </div>
 
         <div class="collection__card_container">
@@ -110,57 +110,57 @@
         </div>
     </section>
     <section class=" container popular">
-        <span id="popular-span">Popular localities in and around </span> <span id="popular-span1"> Chandigarh</span>
+        <span id="popular-span">Popular localities in and around </span> <span id="popular-span1"> New Delhi</span>
         <div class="popular__items">
             <div class="popular__items_card">
-                <div class="popular__items_heading">Sector 26, Chandigarh</div>
+                <div class="popular__items_heading">Sector 26, New Delhi</div>
                 <span class="popular__items_subheading">67 Places</span>
                 <div><i class="fa-solid fa-chevron-right"></i></div>
             </div>
             <div class="popular__items_card">
-                <div class="popular__items_heading">Sector 5, Chandigarh</div>
-                <span class="popular__items_subheading">67 Places</span>
-                <div><i class="fa-solid fa-chevron-right"></i></div>
-
-            </div>
-            <div class="popular__items_card">
-                <div class="popular__items_heading">Sector 36, Chandigarh</div>
+                <div class="popular__items_heading">Hauz khas, New Delhi</div>
                 <span class="popular__items_subheading">67 Places</span>
                 <div><i class="fa-solid fa-chevron-right"></i></div>
 
             </div>
             <div class="popular__items_card">
-                <div class="popular__items_heading">Sector 16, Chandigarh</div>
+                <div class="popular__items_heading">R.K.Puram, New Delhi</div>
                 <span class="popular__items_subheading">67 Places</span>
                 <div><i class="fa-solid fa-chevron-right"></i></div>
 
             </div>
             <div class="popular__items_card">
-                <div class="popular__items_heading">Sector 46, Chandigarh</div>
+                <div class="popular__items_heading">Dilli Haat-INA, New Delhi</div>
                 <span class="popular__items_subheading">67 Places</span>
                 <div><i class="fa-solid fa-chevron-right"></i></div>
 
             </div>
             <div class="popular__items_card">
-                <div class="popular__items_heading">Sector 38, Chandigarh</div>
+                <div class="popular__items_heading">Mayur Vihar, New Delhi</div>
                 <span class="popular__items_subheading">67 Places</span>
                 <div><i class="fa-solid fa-chevron-right"></i></div>
 
             </div>
             <div class="popular__items_card">
-                <div class="popular__items_heading">Sector 17, Chandigarh</div>
+                <div class="popular__items_heading">Sector 38, New Delhi</div>
                 <span class="popular__items_subheading">67 Places</span>
                 <div><i class="fa-solid fa-chevron-right"></i></div>
 
             </div>
             <div class="popular__items_card">
-                <div class="popular__items_heading">Sector 22, Chandigarh</div>
+                <div class="popular__items_heading">Vishwavidyalaya, New Delhi</div>
                 <span class="popular__items_subheading">67 Places</span>
                 <div><i class="fa-solid fa-chevron-right"></i></div>
 
             </div>
             <div class="popular__items_card">
-                <div class="popular__items_heading">Sector 34, Chandigarh</div>
+                <div class="popular__items_heading">Kashmiri Gate, New Delhi</div>
+                <span class="popular__items_subheading">67 Places</span>
+                <div><i class="fa-solid fa-chevron-right"></i></div>
+
+            </div>
+            <div class="popular__items_card">
+                <div class="popular__items_heading">Dwarka Sector 16, New Delhi</div>
                 <span class="popular__items_subheading">67 Places</span>
                 <div><i class="fa-solid fa-chevron-right"></i></div>
 
@@ -202,7 +202,7 @@
     <footer>
         <div class="footer">
             <div class="footer_section1">
-                <img src="/images/logo.png" alt="zomato logo">
+                <img src="zomato-favicon.png" alt="Zomato logo">
                 <div class="section1__buttonContainer">
                     <button>
                         <img src="https://flagcdn.com/w40/in.png" alt="India" style="width: 17px" />
@@ -264,9 +264,10 @@
         <p class="disclamer">
             By continuing past this page, you agree to our Terms of Service, Cookie
             Policy, Privacy Policy and Content Policies. All trademarks are
-            properties of their respective owners. 2008-2022 © Zomato™ Ltd. All
+            properties of their respective owners. 2008-2023 © Zomato™ Ltd. All
             rights reserved.
         </p>
+        <p>Developed By @Vs</p>
     </footer>
 </body>
 
