--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
             Policy, Privacy Policy and Content Policies. All trademarks are
             properties of their respective owners. 2008-2023 © Zomato™ Ltd. All
             rights reserved.
-        </p>
-        <p>Developed By @Vs</p>
+        </p> <p>Developed By @Vs</p>
+        
     </footer>
 </body>
 
