--- a/index.html
+++ b/index.html
@@ -263,9 +263,9 @@
         </div>
         <p class="disclamer">
             By continuing past this page, you agree to our Terms of Service, Cookie
-            Policy, Privacy Policy and Content Policies. All trademarks are
+            Policy, Privacy Policy, and Content Policies. All trademarks are
             properties of their respective owners. 2008-2023 © Zomato™ Ltd. All
-            rights reserved." Developed By @Vs 💫🔥"
+            rights reserved.Developed By @Vs 💫🔥.
         </p> 
         
     </footer>
