--- a/index.html
+++ b/index.html
@@ -265,8 +265,7 @@
             By continuing past this page, you agree to our Terms of Service, Cookie
             Policy, Privacy Policy, and Content Policies. All trademarks are
             properties of their respective owners. 2008-2023 © Zomato™ Ltd. All
-            rights reserved.<b>Developed By @Vs.</b>
-.
+            rights reserved.<b><font color="black">Developed By @Vs</font></b> .
         </p> 
         
     </footer>
